planet classes